styles.css
*{
    box-sizing: border-box;
    font-family:monospace;
    margin: 0;
    color: white;
}

body{
    background-image: url(images/teal.png);
    background-size: cover;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
    display: flex;
    
}

header{
    justify-content: space-between;
    background-color:transparent;
    align-items: center;
    padding: 40px 60px;
    text-align: center;
    position: fixed;
    display: flex;
    z-index: 100;
    width: 100%;
    left: 0;
    top: 0;
}

.logo{
    font-size: 36px;
    color: white;
    text-decoration: none;
    font-weight: 700;
}

.navbar a{
    position: relative;
    font-size: 18px;
    color: white;
    font-weight: 500;
    margin-left: 30px;
    text-decoration: none;
}

.navbar a:hover{
    text-decoration: underline;
}


.container{
    background-color: #333333;
    padding: 1rem;
    border-radius: .5rem;
    width: 600px;
    max-width: 90%;
    z-index: 150;
    font-size: 20px;
}

.paragraph{
    margin-bottom: 1rem;
    padding: 10px;
}

.textbox{
    background-color: #1a1a1a;
    border-radius: .5rem;
    outline: none;
    border: none;
    width: 100%;
    height: 2.5em;
    resize: none;
    padding: 12px;
    font-size: 1em;
    color: white;
    overflow: hidden;
}

.textbox:focus{
    border-color: white;
}

.githublink{
    position: absolute;
    background-color: transparent;
    right:0 ;
    top: 0;
    padding: 1em;
    font-size: 28px;
    font-weight: bold;
}

.correct {
    color: rgb(108, 220, 108);
}

.next {
    color: rgb(237, 228, 115)
}

.wordDisplay{
    width: 600px;
    text-align: left;
    padding:1rem;
    font-family: monospace;
    font-size: large;
    justify-content: space-between;
    display: flex;
    align-items: center;
    max-width: 90%;
}

.reset:hover{
    text-decoration: underline;
    cursor: pointer;
}

